kubernetes/apps/actual-budget/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: docker.io/actualbudget/actual-server:26.10.0@sha256:24645e971da6bb1a1f953d6859e307a0b29be1e8b4130a35b3220c209b5b860c
          ports:
            - containerPort: 5006
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: actual-budget-pvc
