kubernetes/apps/actual-budget/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
spec:
  selector:
    app: actual-budget
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5006
